--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,10 +17,13 @@ jobs:
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
-
+    
+    
     steps:
-    - name: arm-none-eabi-gcc
-    - uses: fiam/arm-none-eabi-gcc@v1
+
+    - uses: fiam/arm-none-eabi-gcc@v1.0.2
+
+    - name: Configure CMake
     - run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
 
