--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,7 +23,7 @@ jobs:
     
     steps:
     - name: arm-none-eabi-gcc
-      uses: fiam/arm-none-eabi-gcc@v1
+      run: sudo apt-get install -y gcc-arm-none-eabi
 
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
