--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -31,7 +31,8 @@ jobs:
     - name: Configure CMake
       run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
-
+    - name: mkdir
+      run: mkdir ./build
     - name: Build
       # Build your program with the given configuration
       run: cmake --build ./build --config ${{env.BUILD_TYPE}} --target timer.elf -j 9
