--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,14 +28,12 @@ jobs:
     
       run: sudo apt-get install -y gcc-arm-none-eabi
 
-    - name: Configure CMake
-      run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: mkdir
       run: mkdir ./build
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ./build --config ${{env.BUILD_TYPE}} --target timer.elf -j 9
+      run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -S ./ -B ./build
 
     - name: Test
       working-directory: ${{github.workspace}}/build
