--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -35,9 +35,12 @@ jobs:
       # Build your program with the given configuration
       run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -S ./ -B ./build
 
-    - name: Test
-      working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}}
+    - name: publish
+      uses: actions/upload-artifact@v2
+      with:
+        name: myapp-and-doc
+        path: |
+          ./build/timer.elf
+          ./build/timer.bin
+          ./build/timer.hex
 
